# journal

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  about.toml  build.rs
.cargo/: config.toml
.dev/: config.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
benches/: tui.rs
crates/journal-analytics/: Cargo.toml
crates/journal-analytics/src/: cadence.rs  correlations.rs  lib.rs  mood.rs
crates/journal-context-provider/: Cargo.toml  build.rs
crates/journal-context-provider/src/: air.rs  celestial.rs  http.rs  lib.rs  weather.rs
crates/journal-core/: Cargo.toml
crates/journal-core/src/: dates.rs  entry.rs  feelings.rs  lib.rs  markdown.rs  search.rs
crates/journal-encryption/: Cargo.toml
crates/journal-encryption/src/: cipher.rs  error.rs  files.rs  identity.rs  lib.rs  paths.rs  pending.rs  recipients.rs  roster.rs  tests.rs
crates/journal-fuse/: Cargo.toml  bridge.c  build.rs
crates/journal-fuse/src/: lib.rs  ops.rs  path_policy.rs
crates/journal-import/: Cargo.toml
crates/journal-import/src/: lib.rs
crates/journal-import/src/dayone/: mod.rs  model.rs  moments.rs  richtext.rs
crates/journal-import/tests/: import_dayone.rs
crates/journal-locate/: Cargo.toml
crates/journal-seed/: Cargo.toml
crates/journal-seed/src/: lib.rs
crates/journal-storage/: Cargo.toml
crates/journal-storage/src/: celestial.rs  crypto.rs  error.rs  geocode.rs  lib.rs  markdown.rs  migrate.rs  roster.rs  weather.rs
crates/journal-storage/src/device_location/: geoclue.rs  macos.rs  mod.rs  termux.rs
crates/journal-storage/src/storage/: dates.rs  journals.rs  mod.rs
crates/journal-storage/src/storage/entry/: assets.rs  codec.rs  create.rs  edit.rs  mod.rs  paths.rs  read.rs  tests.rs
crates/journal-storage/src/storage/entry/assets/: mod.rs
crates/journal-storage/tests/: encryption_roundtrip.rs
crates/notema-analytics/: Cargo.toml
crates/notema-analytics/benches/: analytics.rs
crates/notema-analytics/src/: cadence.rs  correlations.rs  lib.rs  mood.rs
crates/notema-context/: Cargo.toml  build.rs
crates/notema-context-provider/: Cargo.toml  build.rs
crates/notema-context-provider/src/: air.rs  celestial.rs  geocode.rs  http.rs  lib.rs  weather.rs
crates/notema-context-provider/src/device_location/: geoclue.rs  macos.rs  mod.rs
crates/notema-context/src/: air.rs  celestial.rs  error.rs  geocode.rs  http.rs  lib.rs  timezone.rs  weather.rs
crates/notema-context/src/device_location/: geoclue.rs  ish.rs  macos.rs  mod.rs  termux.rs
crates/notema-core/: Cargo.toml
crates/notema-core/src/: entry.rs  feelings.rs  paths.rs  search.rs
crates/notema-domain/: Cargo.toml
crates/notema-domain/src/: coordinates.rs  dates.rs  entry.rs  feelings.rs  lib.rs
crates/notema-encryption/: Cargo.toml
crates/notema-encryption/src/: cipher.rs  error.rs  files.rs  identity.rs  lib.rs  pending.rs  recipients.rs  roster.rs  signing.rs  tests.rs
crates/notema-fuse/: Cargo.toml  bridge.c  build.rs
crates/notema-fuse/src/: lib.rs  ops.rs  path_policy.rs  tests.rs
crates/notema-import/: Cargo.toml
crates/notema-import/src/: lib.rs
crates/notema-import/src/dayone/: mod.rs  model.rs  moments.rs  richtext.rs  text.rs
crates/notema-import/tests/: import_dayone.rs
crates/notema-locate/: Cargo.toml  NotemaLocate-Info.plist  NotemaLocate.entitlements
crates/notema-locate/src/: main.rs
crates/notema-seed/: Cargo.toml
crates/notema-seed/src/: lib.rs  main.rs
crates/notema-storage/: Cargo.toml
crates/notema-storage/benches/: scan.rs
crates/notema-storage/src/: entry_cache.rs  error.rs  lib.rs  library.rs  markdown.rs  migrate.rs  store_id.rs
crates/notema-storage/src/storage/: dates.rs  journal_metadata.rs  journals.rs  mod.rs
crates/notema-storage/src/storage/entry/: codec.rs  create.rs  edit.rs  mod.rs  paths.rs  read.rs  tests.rs
crates/notema-storage/src/storage/entry/assets/: mod.rs  net.rs
crates/notema-storage/tests/: encryption_roundtrip.rs
docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  MOBILE.md  RELEASING.md  SECURITY.md  STORAGE-FORMAT.md  THEME-REFERENCE.md  THEMES.md  USAGE.md
src/: cli.rs  config.rs  crypto.rs  device.rs  editor.rs  encryption_cli.rs  feelings.rs  ish.rs  lib.rs  licenses.rs  main.rs  markdown.rs  migrate.rs  prompts.rs
src/cli/: backfill.rs  location.rs  log.rs  mod.rs
src/config/: mod.rs
src/storage/: dates.rs  entries.rs  journals.rs  mod.rs  search.rs
src/storage/entry/: create.rs  edit.rs  mod.rs  read.rs  tests.rs
src/tui/: app.rs  bench_support.rs  clipboard.rs  editor_highlight.rs  editor_state.rs  entry_rows.rs  env_strip.rs  environment.rs  events.rs  geocode.rs  hit_test.rs  mod.rs  render.rs  scroll.rs  search.rs  state.rs  surface.rs  syntax_highlight.rs  test_support.rs  text_input.rs  theme.rs  watcher.rs  weather.rs  worker.rs
src/tui/app/: editor.rs  environment.rs  feelings.rs  images.rs  location.rs  metadata.rs  mod.rs  overlays.rs  search.rs  selection.rs  tests.rs  weather.rs
src/tui/events/: action.rs  actions.rs  handlers.rs  keyboard.rs  mod.rs  mouse.rs  tests.rs
src/tui/features/: address.rs  editor.rs  environment.rs  location.rs  mod.rs  overlays.rs  search.rs
src/tui/image/: ascii.rs  graphics.rs  mod.rs  refs.rs  worker.rs
src/tui/render/: chrome.rs  dialogs.rs  editor.rs  entries.rs  footer.rs  frames.rs  image_viewer.rs  journals.rs  layout.rs  markdown.rs  markdown_panel.rs  menus.rs  metadata.rs  mod.rs  pending.rs  reader.rs  stats.rs  table.rs  tests.rs  toasts.rs  unlock.rs
src/tui/runtime/: mod.rs  scheduler.rs  terminal.rs
src/tui/theme/: mod.rs  schema.rs  tests.rs
src/tui/themes/: arcade.toml  blossom.toml  catppuccin.toml  celadon.toml  classic.toml  crt.toml  cyberpunk.toml  deep-space.toml  dracula.toml  dungeon.toml  e-ink.toml  eclipse.toml  eldritch.toml  fjord.toml  gameboy.toml  grove.toml  gruvbox.toml  hal.toml  indigo.toml  journal.toml  lavender.toml  maple.toml  matcha.toml  matrix.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized.toml  synthwave.toml  tron.toml  (+3 more)
tests/: cli.rs
(+13 files in other folders)
