[package]
name = "notema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace]
members = ["crates/notema-core", "crates/notema-encryption", "crates/notema-storage", "crates/notema-context-provider", "crates/notema-import", "crates/notema-analytics", "crates/notema-seed", "crates/notema-locate", "crates/notema-fuse"]

# One version for the whole workspace: the macOS location helper stamps this into
# its bundle and the runtime checks it, so the crates must not drift apart.
[workspace.package]
version = "2026.7.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Paul-Vincent Roll <notema@paviro.de>"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
# Decompress and parse the embedded third-party license report (see build.rs).
flate2 = "1"
# FUSE mount of a decrypted journal, behind the `fuse` feature. The crate drives
# libfuse's own high-level API through a small C bridge (crates/notema-fuse/bridge.c),
# so a fuse-enabled binary needs the system libfuse3 (macFUSE or fuse-t on macOS)
# present; the standard build leaves it out entirely. macOS + Linux only.
notema-fuse = { path = "crates/notema-fuse", optional = true }
image = { version = "0.25", default-features = false }
indicatif = "0.17"
# rascii_art still targets image 0.24; a second, decode-feature-free copy lets us
# hand it images we already decoded on the 0.25 side (see `tui::image::to_rascii_image`).
image_024 = { package = "image", version = "0.24", default-features = false }
notema-analytics = { path = "crates/notema-analytics" }
notema-context-provider = { path = "crates/notema-context-provider" }
notema-core = { path = "crates/notema-core" }
notema-import = { path = "crates/notema-import" }
notema-seed = { path = "crates/notema-seed" }
notema-storage = { path = "crates/notema-storage" }
mimalloc = "0.1"
notify = "7.0"
ratatui = "0.30"
ratatui_029 = { package = "ratatui", version = "0.29" }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
# highlight-lang-* gates one tree-sitter grammar each; add more as needed.
ratatui-markdown = { version = "0.3.6", default-features = false, features = [
    "markdown",
    "mermaid",
    "highlight",
    "highlight-lang-bash",
    "highlight-lang-css",
    "highlight-lang-diff",
    "highlight-lang-html",
    "highlight-lang-javascript",
    "highlight-lang-json",
    "highlight-lang-python",
    "highlight-lang-rust",
    "highlight-lang-sql",
    "highlight-lang-swift",
    "highlight-lang-toml",
    "highlight-lang-typescript",
    "highlight-lang-yaml",
] }
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
rascii_art = "0.4.5"
rayon = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
unicode-width = "0.2"
zeroize = "1.9.0"
terminal-colorsaurus = "1.0.3"

[features]
# Off by default: the standard build has no FUSE dependency and runs everywhere.
# Enable for the dedicated macOS/Linux "-fuse" release artifacts (see Makefile.toml).
fuse = ["dep:notema-fuse"]

[build-dependencies]
# build.rs shells out to cargo-about and embeds a gzipped JSON license report.
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

# Fork of ratatui-textarea 0.9.2 adding public accessors (scroll_offset,
# screen_line_count, cursor_at_screen) the editor needs for its scrollbar and
# scroll-aware mouse mapping. Upstream keeps these pub(crate); drop this patch
# if/when they land in a release.
[patch.crates-io]
ratatui-textarea = { git = "https://github.com/paviro/ratatui-textarea", rev = "4d3632988a6cee71c2607f3b6a2f074610a43235" }
