[package]
name = "notema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[workspace]
resolver = "3"
members = ["crates/notema-domain", "crates/notema-encryption", "crates/notema-storage", "crates/notema-context", "crates/notema-import", "crates/notema-analytics", "crates/notema-seed", "crates/notema-locate", "crates/notema-fuse"]

# One version for the whole workspace: the macOS location helper stamps this into
# its bundle and the runtime checks it, so the crates must not drift apart.
[workspace.package]
version = "2026.7.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Paul-Vincent Roll <notema@paviro.de>"]
rust-version = "1.96.0"
publish = false

[workspace.dependencies]
age = { version = "0.11.3", default-features = false, features = ["armor"] }
anyhow = "1"
cc = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
ed25519-dalek = { version = "2", features = ["zeroize"] }
flate2 = "1"
getrandom = "0.2"
hex = "0.4"
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false }
indicatif = "0.18.4"
libc = "0.2"
moxcms = "0.8"
notify = "8.2.0"
open = "5"
objc2 = "0.6"
objc2-core-location = { version = "0.3", default-features = false, features = ["std", "CLLocation", "CLLocationManager", "CLLocationManagerDelegate", "CLError"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSDate", "NSEnumerator", "NSError", "NSObjCRuntime", "NSRunLoop", "NSString"] }
pkg-config = "0.3"
rand = "0.9"
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
rayon = "1"
regex = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sunrise = "3.0.0"
tempfile = "3"
terminal-colorsaurus = "1.0.3"
thiserror = "2"
toml = "1.1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-css = "0.25"
tree-sitter-diff = "0.1"
tree-sitter-highlight = "0.26"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
unicode-width = "0.2"
ureq = { version = "3", default-features = false, features = ["rustls"] }
zbus = "5"
zeroize = { version = "1", features = ["serde"] }

notema-analytics = { path = "crates/notema-analytics" }
notema-context = { path = "crates/notema-context" }
notema-domain = { path = "crates/notema-domain" }
notema-encryption = { path = "crates/notema-encryption" }
notema-fuse = { path = "crates/notema-fuse" }
notema-import = { path = "crates/notema-import" }
notema-storage = { path = "crates/notema-storage" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
# Decompress and parse the embedded third-party license report (see build.rs).
flate2.workspace = true
# FUSE mount of a decrypted journal, behind the `fuse` feature. The crate drives
# libfuse's own high-level API through a small C bridge (crates/notema-fuse/bridge.c),
# so a fuse-enabled binary needs the system libfuse3 (macFUSE or fuse-t on macOS)
# present; the standard build leaves it out entirely. macOS + Linux only.
notema-fuse = { workspace = true, optional = true }
image.workspace = true
indicatif.workspace = true
notema-analytics.workspace = true
notema-context.workspace = true
notema-domain.workspace = true
notema-encryption.workspace = true
notema-import.workspace = true
notema-storage.workspace = true
notify.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
ratatui-textarea.workspace = true
rayon.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-css.workspace = true
tree-sitter-diff.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-html.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-yaml.workspace = true
unicode-width.workspace = true
zeroize.workspace = true
terminal-colorsaurus.workspace = true

[features]
# Off by default: the standard build has no FUSE dependency and runs everywhere.
# Enable for the dedicated macOS/Linux "-fuse" release artifacts (see Makefile.toml).
fuse = ["dep:notema-fuse"]
# Exposes the `bench` module (private TUI hot paths) for benches/. Dev-only.
bench = []

[[bench]]
name = "tui"
harness = false
required-features = ["bench"]

[build-dependencies]
# build.rs shells out to cargo-about and embeds a gzipped JSON license report.
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true

# Fork of ratatui-textarea 0.9.2 the editor depends on: public accessors
# (scroll_offset, screen_line_count, cursor_at_screen) for its scrollbar and
# scroll-aware mouse mapping, plus set_syntax_spans for the markdown highlighter's
# base styling layer. Upstream keeps these pub(crate); drop this patch if/when they
# land in a release.
[patch.crates-io]
ratatui-textarea = { git = "https://github.com/paviro/ratatui-textarea", rev = "e2872ed3476cf571a736803ff418e5b555a538ec" }
