[package]
name = "journal-import"
version = "2026.7.1"
edition = "2024"

[dependencies]
journal-core = { path = "../journal-core" }
journal-storage = { path = "../journal-storage" }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
