[package]
name = "journal-import"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
journal-core = { path = "../journal-core" }
journal-storage = { path = "../journal-storage" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
