[package]
name = "journal-seed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4"
journal-core = { path = "../journal-core" }
journal-storage = { path = "../journal-storage" }
rand = "0.9"

[dev-dependencies]
tempfile = "3"
