[package]
name = "journal-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
journal-core = { path = "../journal-core" }
journal-encryption = { path = "../journal-encryption" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
moxcms = "0.8"
nanoid = "0.5.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
sunrise = "3.0.0"

# Device location ("grab current GPS") providers, one per platform so no crate is
# pulled in where it isn't used. See src/device_location/. macOS has no crate dep:
# it extracts and runs the bundled `journal-locate` helper .app (a bare binary
# can't get CoreLocation authorization on modern macOS).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[dev-dependencies]
tempfile = "3"
