[package]
name = "journal-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
journal-core = { path = "../journal-core" }
journal-encryption = { path = "../journal-encryption" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
moxcms = "0.8"
nanoid = "0.5.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
