[package]
name = "notema-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
notema-domain.workspace = true

[lints]
workspace = true

[[bench]]
name = "analytics"
harness = false
