[package]
name = "notema-context-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
notema-core = { path = "../notema-core" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sunrise = "3.0.0"
ureq = { version = "3", default-features = false, features = ["rustls"] }

# Device location ("grab current GPS") providers, one per platform so no crate is
# pulled in where it isn't used. See src/device_location/. macOS has no crate dep:
# it extracts and runs the bundled `notema-locate` helper .app (a bare binary
# can't get CoreLocation authorization on modern macOS).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
