[package]
name = "notema-import"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
notema-domain.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
notema-storage.workspace = true
tempfile.workspace = true

[lints]
workspace = true
