[package]
name = "notema-seed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
notema-domain.workspace = true
notema-storage.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
