[package]
name = "notema-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
notema-domain.workspace = true
notema-encryption.workspace = true
anyhow.workspace = true
chrono.workspace = true
iana-time-zone.workspace = true
image = { workspace = true, features = ["jpeg", "png", "gif", "webp", "bmp"] }
moxcms.workspace = true
nanoid.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
