[package]
name = "notema-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
notema-domain.workspace = true
notema-encryption.workspace = true
anyhow.workspace = true
chrono.workspace = true
getrandom.workspace = true
hex.workspace = true
iana-time-zone.workspace = true
image = { workspace = true, features = ["jpeg", "png", "gif", "webp", "bmp"] }
moxcms.workspace = true
rand.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true

[features]
default = []
tls-ring = ["ureq/rustls"]
tls-native = ["ureq/native-tls"]

[dev-dependencies]
tempfile.workspace = true

[[bench]]
name = "scan"
harness = false

[lints]
workspace = true
